New Shop Example

--- a/test/src/main/java/uks/debuggen/shop/events/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/shop/events/classModel.yaml
@@ -1,5 +1,5 @@
 - c: 	org.fulib.classmodel.ClassModel
-  classes: 	event 	dataEvent 	dataGroup 	query 	serviceSubscribed 	command 	storeBoxCommand 	boxBuilt 	productStoredEvent 	selectProductCommand 	submitOrderCommand 	orderBuilt 	customerBuilt 	orderRegisteredEvent 	pickTaskBuilt 	orderApprovedEvent 	pickOrderCommand 	orderPickedEvent 	orderDeclinedEvent
+  classes: 	event 	dataEvent 	dataGroup 	query 	serviceSubscribed
   defaultCollectionType: 	c1
   defaultPropertyStyle: 	Bean
   defaultRoleType: 	"java.util.ArrayList<%s>"
@@ -13,7 +13,7 @@
   modified: 	false
   name: 	Event
   propertyStyle: 	Bean
-  subClasses: 	dataEvent 	query 	serviceSubscribed 	command 	productStoredEvent 	orderRegisteredEvent 	orderApprovedEvent 	orderPickedEvent 	orderDeclinedEvent
+  subClasses: 	dataEvent 	query 	serviceSubscribed
 
 - dataEvent: 	org.fulib.classmodel.Clazz
   attributes: 	dataEvent_blockId
@@ -22,7 +22,7 @@
   name: 	DataEvent
   propertyStyle: 	Bean
   roles: 	dataEvent_sagas 	dataEvent_query
-  subClasses: 	dataGroup 	boxBuilt 	orderBuilt 	customerBuilt 	pickTaskBuilt
+  subClasses: 	dataGroup
   superClass: 	event
 
 - dataGroup: 	org.fulib.classmodel.Clazz
@@ -47,117 +47,6 @@
   model: 	c
   modified: 	false
   name: 	ServiceSubscribed
-  propertyStyle: 	Bean
-  superClass: 	event
-
-- command: 	org.fulib.classmodel.Clazz
-  model: 	c
-  modified: 	false
-  name: 	Command
-  propertyStyle: 	Bean
-  subClasses: 	storeBoxCommand 	selectProductCommand 	submitOrderCommand 	pickOrderCommand
-  superClass: 	event
-
-- storeBoxCommand: 	org.fulib.classmodel.Clazz
-  attributes: 	storeBoxCommand_box 	storeBoxCommand_product 	storeBoxCommand_place
-  model: 	c
-  modified: 	false
-  name: 	StoreBoxCommand
-  propertyStyle: 	Bean
-  superClass: 	command
-
-- boxBuilt: 	org.fulib.classmodel.Clazz
-  attributes: 	boxBuilt_product 	boxBuilt_place
-  model: 	c
-  modified: 	false
-  name: 	BoxBuilt
-  propertyStyle: 	Bean
-  superClass: 	dataEvent
-
-- productStoredEvent: 	org.fulib.classmodel.Clazz
-  attributes: 	productStoredEvent_box 	productStoredEvent_product 	productStoredEvent_place
-  model: 	c
-  modified: 	false
-  name: 	ProductStoredEvent
-  propertyStyle: 	Bean
-  superClass: 	event
-
-- selectProductCommand: 	org.fulib.classmodel.Clazz
-  model: 	c
-  modified: 	false
-  name: 	SelectProductCommand
-  propertyStyle: 	Bean
-  superClass: 	command
-
-- submitOrderCommand: 	org.fulib.classmodel.Clazz
-  attributes: 	submitOrderCommand_product 	submitOrderCommand_name 	submitOrderCommand_address 	submitOrderCommand_trigger 	submitOrderCommand_customer
-  model: 	c
-  modified: 	false
-  name: 	SubmitOrderCommand
-  propertyStyle: 	Bean
-  superClass: 	command
-
-- orderBuilt: 	org.fulib.classmodel.Clazz
-  attributes: 	orderBuilt_product 	orderBuilt_customer 	orderBuilt_address 	orderBuilt_state
-  model: 	c
-  modified: 	false
-  name: 	OrderBuilt
-  propertyStyle: 	Bean
-  superClass: 	dataEvent
-
-- customerBuilt: 	org.fulib.classmodel.Clazz
-  attributes: 	customerBuilt_orders
-  model: 	c
-  modified: 	false
-  name: 	CustomerBuilt
-  propertyStyle: 	Bean
-  superClass: 	dataEvent
-
-- orderRegisteredEvent: 	org.fulib.classmodel.Clazz
-  attributes: 	orderRegisteredEvent_order 	orderRegisteredEvent_product 	orderRegisteredEvent_customer 	orderRegisteredEvent_address 	orderRegisteredEvent_trigger
-  model: 	c
-  modified: 	false
-  name: 	OrderRegisteredEvent
-  propertyStyle: 	Bean
-  superClass: 	event
-
-- pickTaskBuilt: 	org.fulib.classmodel.Clazz
-  attributes: 	pickTaskBuilt_order 	pickTaskBuilt_product 	pickTaskBuilt_customer 	pickTaskBuilt_address 	pickTaskBuilt_state 	pickTaskBuilt_box
-  model: 	c
-  modified: 	false
-  name: 	PickTaskBuilt
-  propertyStyle: 	Bean
-  superClass: 	dataEvent
-
-- orderApprovedEvent: 	org.fulib.classmodel.Clazz
-  attributes: 	orderApprovedEvent_order
-  model: 	c
-  modified: 	false
-  name: 	OrderApprovedEvent
-  propertyStyle: 	Bean
-  superClass: 	event
-
-- pickOrderCommand: 	org.fulib.classmodel.Clazz
-  attributes: 	pickOrderCommand_pickTask 	pickOrderCommand_box 	pickOrderCommand_user
-  model: 	c
-  modified: 	false
-  name: 	PickOrderCommand
-  propertyStyle: 	Bean
-  superClass: 	command
-
-- orderPickedEvent: 	org.fulib.classmodel.Clazz
-  attributes: 	orderPickedEvent_pickTask 	orderPickedEvent_box 	orderPickedEvent_user
-  model: 	c
-  modified: 	false
-  name: 	OrderPickedEvent
-  propertyStyle: 	Bean
-  superClass: 	event
-
-- orderDeclinedEvent: 	org.fulib.classmodel.Clazz
-  attributes: 	orderDeclinedEvent_order
-  model: 	c
-  modified: 	false
-  name: 	OrderDeclinedEvent
   propertyStyle: 	Bean
   superClass: 	event
 
@@ -246,339 +135,6 @@
   id: 	ServiceSubscribed_serviceUrl
   modified: 	false
   name: 	serviceUrl
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- storeBoxCommand_box: 	org.fulib.classmodel.Attribute
-  clazz: 	storeBoxCommand
-  id: 	StoreBoxCommand_box
-  modified: 	false
-  name: 	box
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- storeBoxCommand_product: 	org.fulib.classmodel.Attribute
-  clazz: 	storeBoxCommand
-  id: 	StoreBoxCommand_product
-  modified: 	false
-  name: 	product
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- storeBoxCommand_place: 	org.fulib.classmodel.Attribute
-  clazz: 	storeBoxCommand
-  id: 	StoreBoxCommand_place
-  modified: 	false
-  name: 	place
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- boxBuilt_product: 	org.fulib.classmodel.Attribute
-  clazz: 	boxBuilt
-  id: 	BoxBuilt_product
-  modified: 	false
-  name: 	product
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- boxBuilt_place: 	org.fulib.classmodel.Attribute
-  clazz: 	boxBuilt
-  id: 	BoxBuilt_place
-  modified: 	false
-  name: 	place
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- productStoredEvent_box: 	org.fulib.classmodel.Attribute
-  clazz: 	productStoredEvent
-  id: 	ProductStoredEvent_box
-  modified: 	false
-  name: 	box
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- productStoredEvent_product: 	org.fulib.classmodel.Attribute
-  clazz: 	productStoredEvent
-  id: 	ProductStoredEvent_product
-  modified: 	false
-  name: 	product
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- productStoredEvent_place: 	org.fulib.classmodel.Attribute
-  clazz: 	productStoredEvent
-  id: 	ProductStoredEvent_place
-  modified: 	false
-  name: 	place
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- submitOrderCommand_product: 	org.fulib.classmodel.Attribute
-  clazz: 	submitOrderCommand
-  id: 	SubmitOrderCommand_product
-  modified: 	false
-  name: 	product
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- submitOrderCommand_name: 	org.fulib.classmodel.Attribute
-  clazz: 	submitOrderCommand
-  id: 	SubmitOrderCommand_name
-  modified: 	false
-  name: 	name
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- submitOrderCommand_address: 	org.fulib.classmodel.Attribute
-  clazz: 	submitOrderCommand
-  id: 	SubmitOrderCommand_address
-  modified: 	false
-  name: 	address
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- submitOrderCommand_trigger: 	org.fulib.classmodel.Attribute
-  clazz: 	submitOrderCommand
-  id: 	SubmitOrderCommand_trigger
-  modified: 	false
-  name: 	trigger
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- submitOrderCommand_customer: 	org.fulib.classmodel.Attribute
-  clazz: 	submitOrderCommand
-  id: 	SubmitOrderCommand_customer
-  modified: 	false
-  name: 	customer
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- orderBuilt_product: 	org.fulib.classmodel.Attribute
-  clazz: 	orderBuilt
-  id: 	OrderBuilt_product
-  modified: 	false
-  name: 	product
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- orderBuilt_customer: 	org.fulib.classmodel.Attribute
-  clazz: 	orderBuilt
-  id: 	OrderBuilt_customer
-  modified: 	false
-  name: 	customer
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- orderBuilt_address: 	org.fulib.classmodel.Attribute
-  clazz: 	orderBuilt
-  id: 	OrderBuilt_address
-  modified: 	false
-  name: 	address
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- orderBuilt_state: 	org.fulib.classmodel.Attribute
-  clazz: 	orderBuilt
-  id: 	OrderBuilt_state
-  modified: 	false
-  name: 	state
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- customerBuilt_orders: 	org.fulib.classmodel.Attribute
-  clazz: 	customerBuilt
-  id: 	CustomerBuilt_orders
-  modified: 	false
-  name: 	orders
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- orderRegisteredEvent_order: 	org.fulib.classmodel.Attribute
-  clazz: 	orderRegisteredEvent
-  id: 	OrderRegisteredEvent_order
-  modified: 	false
-  name: 	order
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- orderRegisteredEvent_product: 	org.fulib.classmodel.Attribute
-  clazz: 	orderRegisteredEvent
-  id: 	OrderRegisteredEvent_product
-  modified: 	false
-  name: 	product
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- orderRegisteredEvent_customer: 	org.fulib.classmodel.Attribute
-  clazz: 	orderRegisteredEvent
-  id: 	OrderRegisteredEvent_customer
-  modified: 	false
-  name: 	customer
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- orderRegisteredEvent_address: 	org.fulib.classmodel.Attribute
-  clazz: 	orderRegisteredEvent
-  id: 	OrderRegisteredEvent_address
-  modified: 	false
-  name: 	address
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- orderRegisteredEvent_trigger: 	org.fulib.classmodel.Attribute
-  clazz: 	orderRegisteredEvent
-  id: 	OrderRegisteredEvent_trigger
-  modified: 	false
-  name: 	trigger
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- pickTaskBuilt_order: 	org.fulib.classmodel.Attribute
-  clazz: 	pickTaskBuilt
-  id: 	PickTaskBuilt_order
-  modified: 	false
-  name: 	order
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- pickTaskBuilt_product: 	org.fulib.classmodel.Attribute
-  clazz: 	pickTaskBuilt
-  id: 	PickTaskBuilt_product
-  modified: 	false
-  name: 	product
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- pickTaskBuilt_customer: 	org.fulib.classmodel.Attribute
-  clazz: 	pickTaskBuilt
-  id: 	PickTaskBuilt_customer
-  modified: 	false
-  name: 	customer
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- pickTaskBuilt_address: 	org.fulib.classmodel.Attribute
-  clazz: 	pickTaskBuilt
-  id: 	PickTaskBuilt_address
-  modified: 	false
-  name: 	address
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- pickTaskBuilt_state: 	org.fulib.classmodel.Attribute
-  clazz: 	pickTaskBuilt
-  id: 	PickTaskBuilt_state
-  modified: 	false
-  name: 	state
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- pickTaskBuilt_box: 	org.fulib.classmodel.Attribute
-  clazz: 	pickTaskBuilt
-  id: 	PickTaskBuilt_box
-  modified: 	false
-  name: 	box
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- orderApprovedEvent_order: 	org.fulib.classmodel.Attribute
-  clazz: 	orderApprovedEvent
-  id: 	OrderApprovedEvent_order
-  modified: 	false
-  name: 	order
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- pickOrderCommand_pickTask: 	org.fulib.classmodel.Attribute
-  clazz: 	pickOrderCommand
-  id: 	PickOrderCommand_pickTask
-  modified: 	false
-  name: 	pickTask
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- pickOrderCommand_box: 	org.fulib.classmodel.Attribute
-  clazz: 	pickOrderCommand
-  id: 	PickOrderCommand_box
-  modified: 	false
-  name: 	box
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- pickOrderCommand_user: 	org.fulib.classmodel.Attribute
-  clazz: 	pickOrderCommand
-  id: 	PickOrderCommand_user
-  modified: 	false
-  name: 	user
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- orderPickedEvent_pickTask: 	org.fulib.classmodel.Attribute
-  clazz: 	orderPickedEvent
-  id: 	OrderPickedEvent_pickTask
-  modified: 	false
-  name: 	pickTask
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- orderPickedEvent_box: 	org.fulib.classmodel.Attribute
-  clazz: 	orderPickedEvent
-  id: 	OrderPickedEvent_box
-  modified: 	false
-  name: 	box
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- orderPickedEvent_user: 	org.fulib.classmodel.Attribute
-  clazz: 	orderPickedEvent
-  id: 	OrderPickedEvent_user
-  modified: 	false
-  name: 	user
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- orderDeclinedEvent_order: 	org.fulib.classmodel.Attribute
-  clazz: 	orderDeclinedEvent
-  id: 	OrderDeclinedEvent_order
-  modified: 	false
-  name: 	order
   propertyStyle: 	Bean
   type: 	String
   typeSignature: 	String
