Fixed code gen. New shop project.

--- a/test/src/gen/resources/workflows/shop/ShopWorkflow2.es.yaml
+++ b/test/src/gen/resources/workflows/shop/ShopWorkflow2.es.yaml
@@ -1,6 +1,6 @@
 
 # provide name for this scenario
-# - workflow: ordering smooth
+- workflow: ordering smooth
 
 # provide some service with its port
 - service: Shop
