--- a/test/src/test/java/uks/fulibgen/shop/classModel.yaml
+++ b/test/src/test/java/uks/fulibgen/shop/classModel.yaml
@@ -63,7 +63,7 @@ pre.shouldHave(text(\"http://localhost:42100/apply\"));
 pre.shouldHave(text(\"http://localhost:42002/apply\"));
 LinkedHashMap<String, Object> modelMap;
 
-// workflow working smoothly
+// workflow OrderingSmooth
 
 // create StoreBoxCommand: store box 12:00
 StoreBoxCommand e1200 = new StoreBoxCommand();
