--- a/test/src/test/java/uks/debuggen/medical/familydoctordegen/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/medical/familydoctordegen/classModel.yaml
@@ -133,7 +133,7 @@ LinkedHashMap<String, Object> modelMap;
    publish(lung_noisesEvent);
 
    DiseaseBuilt disease2Event = new DiseaseBuilt();
-   disease2Event.setId(\"12:00:01\");
+   disease2Event.setId(\"13:00:01\");
    disease2Event.setBlockId(\"Disease2\");
    disease2Event.setMigratedTo(\"Disease2\");
    publish(disease2Event);
@@ -141,43 +141,12 @@ LinkedHashMap<String, Object> modelMap;
 
 // workflow SimpleConsultations
 
-// create PatientRegisteredEvent: patient registered 14:00
-PatientRegisteredEvent e1400 = new PatientRegisteredEvent();
-e1400.setId(\"14:00\");
-e1400.setName(\"Alice\");
-e1400.setAddress(\"Wonderland 1\");
-e1400.setBirthDate(\"1970-01-01\");
-publish(e1400);
-
-open(\"http://localhost:42000\");
-pre = $(\"#history\");
-pre.shouldHave(text(\"- 14_00:\"));
-
-// check DocMedical
-open(\"http://localhost:42001\");
-pre = $(\"#history\");
-pre.shouldHave(text(\"- 14_00:\"));
-for (DataEvent dataEvent : docMedical.getBuilder().getEventStore().values()) {
-   docMedical.getBuilder().load(dataEvent.getBlockId());
-}
-modelMap = docMedical.getBuilder().getModel().getModelMap();
-if (modelMap.values().size() > 0) {
-   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/docMedical14_00.svg\", modelMap.values());
-}
-
-open(\"http://localhost:42001\");
-// check data note 14:00:01
-pre = $(\"#data\");
-pre.shouldHave(text(\"- alice:\"));
-pre.shouldHave(matchText(\"name:.*Alice\"));
-pre.shouldHave(matchText(\"address:.*\\"Wonderland 1\\"\"));
-pre.shouldHave(matchText(\"birthDate:.*1970-01-01\"));
-
-// create ConsultationEvent: consultation registered
-ConsultationEvent e1401 = new ConsultationEvent();
+// create PatientRegisteredEvent: patient registered
+PatientRegisteredEvent e1401 = new PatientRegisteredEvent();
 e1401.setId(\"14:01\");
-e1401.setPatient(\"Alice\");
-e1401.setDate(\"2021-06-02T14:00\");
+e1401.setName(\"Alice\");
+e1401.setAddress(\"Wonderland 1\");
+e1401.setBirthDate(\"1970-01-01\");
 publish(e1401);
 
 open(\"http://localhost:42000\");
@@ -199,15 +168,16 @@ if (modelMap.values().size() > 0) {
 open(\"http://localhost:42001\");
 // check data note 14:01:01
 pre = $(\"#data\");
-pre.shouldHave(text(\"- alice_2021_06_02T14_00:\"));
-pre.shouldHave(matchText(\"cid:.*Alice#2021-06-02T14:00\"));
-pre.shouldHave(matchText(\"patient:.*alice\"));
+pre.shouldHave(text(\"- alice:\"));
+pre.shouldHave(matchText(\"name:.*Alice\"));
+pre.shouldHave(matchText(\"address:.*\\"Wonderland 1\\"\"));
+pre.shouldHave(matchText(\"birthDate:.*1970-01-01\"));
 
-// create SymptomEvent: symptom validated
-SymptomEvent e1402 = new SymptomEvent();
+// create ConsultationRegisteredEvent: consultation registered
+ConsultationRegisteredEvent e1402 = new ConsultationRegisteredEvent();
 e1402.setId(\"14:02\");
-e1402.setSymptom(\"cough\");
-e1402.setConsultation(\"Alice#2021-06-02T14:00\");
+e1402.setPatient(\"Alice\");
+e1402.setDate(\"2021-06-02T14:00\");
 publish(e1402);
 
 open(\"http://localhost:42000\");
@@ -229,15 +199,15 @@ if (modelMap.values().size() > 0) {
 open(\"http://localhost:42001\");
 // check data note 14:02:01
 pre = $(\"#data\");
-pre.shouldHave(text(\"- cough:\"));
-pre.shouldHave(matchText(\"name:.*cough\"));
-pre.shouldHave(matchText(\"consultations:.*alice_2021_06_02T14_00.*\"));
+pre.shouldHave(text(\"- alice_2021_06_02T14_00:\"));
+pre.shouldHave(matchText(\"cid:.*Alice#2021-06-02T14:00\"));
+pre.shouldHave(matchText(\"patient:.*alice\"));
 
-// create SymptomEvent: symptom validated
-SymptomEvent e1403 = new SymptomEvent();
+// create SymptomValidatedEvent: symptom validated
+SymptomValidatedEvent e1403 = new SymptomValidatedEvent();
 e1403.setId(\"14:03\");
-e1403.setSymptom(\"runny nose\");
-e1403.setConsultations(\"[Alice#2021-06-02T14:00]\");
+e1403.setSymptom(\"cough\");
+e1403.setConsultation(\"Alice#2021-06-02T14:00\");
 publish(e1403);
 
 open(\"http://localhost:42000\");
@@ -259,16 +229,15 @@ if (modelMap.values().size() > 0) {
 open(\"http://localhost:42001\");
 // check data note 14:03:01
 pre = $(\"#data\");
-pre.shouldHave(text(\"- runny_nose:\"));
-pre.shouldHave(matchText(\"name:.*\\"runny nose\\"\"));
+pre.shouldHave(text(\"- cough:\"));
+pre.shouldHave(matchText(\"name:.*cough\"));
 pre.shouldHave(matchText(\"consultations:.*alice_2021_06_02T14_00.*\"));
 
-// create TestEvent: test done
-TestEvent e1404 = new TestEvent();
+// create SymptomValidatedEvent: symptom validated
+SymptomValidatedEvent e1404 = new SymptomValidatedEvent();
 e1404.setId(\"14:04\");
-e1404.setTest(\"temperature\");
-e1404.setResult(\"39.8 Celsius\");
-e1404.setConsultation(\"[Alice#2021-06-02T14:00]\");
+e1404.setSymptom(\"runny nose\");
+e1404.setConsultations(\"[Alice#2021-06-02T14:00]\");
 publish(e1404);
 
 open(\"http://localhost:42000\");
@@ -290,22 +259,16 @@ if (modelMap.values().size() > 0) {
 open(\"http://localhost:42001\");
 // check data note 14:04:01
 pre = $(\"#data\");
-pre.shouldHave(text(\"- alice_t001_2021_06_02T14_00:\"));
-pre.shouldHave(matchText(\"cid:.*Alice#t001#2021-06-02T14:00\"));
-pre.shouldHave(matchText(\"kind:.*temperature\"));
-pre.shouldHave(matchText(\"result:.*\\"39.8 Celsius\\"\"));
-pre.shouldHave(matchText(\"consultation:.*alice_2021_06_02T14_00\"));
-// check data note 14:04:02
-pre = $(\"#data\");
-pre.shouldHave(text(\"- medium_fever:\"));
-pre.shouldHave(matchText(\"name:.*\\"medium fever\\"\"));
+pre.shouldHave(text(\"- runny_nose:\"));
+pre.shouldHave(matchText(\"name:.*\\"runny nose\\"\"));
 pre.shouldHave(matchText(\"consultations:.*alice_2021_06_02T14_00.*\"));
 
-// create DiagnosisEvent: diagnosis done
-DiagnosisEvent e1405 = new DiagnosisEvent();
+// create TestDoneEvent: test done
+TestDoneEvent e1405 = new TestDoneEvent();
 e1405.setId(\"14:05\");
-e1405.setDiagnosis(\"common cold\");
-e1405.setConsultation(\"Alice#2021-06-02T14:00\");
+e1405.setTest(\"temperature\");
+e1405.setResult(\"39.8 Celsius\");
+e1405.setConsultation(\"[Alice#2021-06-02T14:00]\");
 publish(e1405);
 
 open(\"http://localhost:42000\");
@@ -327,14 +290,21 @@ if (modelMap.values().size() > 0) {
 open(\"http://localhost:42001\");
 // check data note 14:05:01
 pre = $(\"#data\");
-pre.shouldHave(text(\"- alice_2021_06_02T14_00:\"));
-pre.shouldHave(matchText(\"cid:.*Alice#2021-06-02T14:00\"));
-pre.shouldHave(matchText(\"diagnosis:.*common_cold\"));
+pre.shouldHave(text(\"- alice_t001_2021_06_02T14_00:\"));
+pre.shouldHave(matchText(\"cid:.*Alice#t001#2021-06-02T14:00\"));
+pre.shouldHave(matchText(\"kind:.*temperature\"));
+pre.shouldHave(matchText(\"result:.*\\"39.8 Celsius\\"\"));
+pre.shouldHave(matchText(\"consultation:.*alice_2021_06_02T14_00\"));
+// check data note 14:05:02
+pre = $(\"#data\");
+pre.shouldHave(text(\"- medium_fever:\"));
+pre.shouldHave(matchText(\"name:.*\\"medium fever\\"\"));
+pre.shouldHave(matchText(\"consultations:.*alice_2021_06_02T14_00.*\"));
 
-// create TreatmentEvent: treatment initiated
-TreatmentEvent e1406 = new TreatmentEvent();
+// create DiagnosisDoneEvent: diagnosis done
+DiagnosisDoneEvent e1406 = new DiagnosisDoneEvent();
 e1406.setId(\"14:06\");
-e1406.setTreatment(\"ibuprofen 400 1-1-1\");
+e1406.setDiagnosis(\"common cold\");
 e1406.setConsultation(\"Alice#2021-06-02T14:00\");
 publish(e1406);
 
@@ -359,18 +329,48 @@ open(\"http://localhost:42001\");
 pre = $(\"#data\");
 pre.shouldHave(text(\"- alice_2021_06_02T14_00:\"));
 pre.shouldHave(matchText(\"cid:.*Alice#2021-06-02T14:00\"));
-pre.shouldHave(matchText(\"treatment:.*\\"ibuprofen 400 1-1-1\\"\"));
+pre.shouldHave(matchText(\"diagnosis:.*common_cold\"));
 
-// workflow Accounting
-
-// create InvoiceSentEvent: invoice sent 14:07
-InvoiceSentEvent e1407 = new InvoiceSentEvent();
+// create TreatmentInitiatedEvent: treatment initiated
+TreatmentInitiatedEvent e1407 = new TreatmentInitiatedEvent();
 e1407.setId(\"14:07\");
+e1407.setTreatment(\"ibuprofen 400 1-1-1\");
+e1407.setConsultation(\"Alice#2021-06-02T14:00\");
 publish(e1407);
 
 open(\"http://localhost:42000\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 14_07:\"));
+
+// check DocMedical
+open(\"http://localhost:42001\");
+pre = $(\"#history\");
+pre.shouldHave(text(\"- 14_07:\"));
+for (DataEvent dataEvent : docMedical.getBuilder().getEventStore().values()) {
+   docMedical.getBuilder().load(dataEvent.getBlockId());
+}
+modelMap = docMedical.getBuilder().getModel().getModelMap();
+if (modelMap.values().size() > 0) {
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/docMedical14_07.svg\", modelMap.values());
+}
+
+open(\"http://localhost:42001\");
+// check data note 14:07:01
+pre = $(\"#data\");
+pre.shouldHave(text(\"- alice_2021_06_02T14_00:\"));
+pre.shouldHave(matchText(\"cid:.*Alice#2021-06-02T14:00\"));
+pre.shouldHave(matchText(\"treatment:.*\\"ibuprofen 400 1-1-1\\"\"));
+
+// workflow Accounting
+
+// create InvoiceSentEvent: invoice sent
+InvoiceSentEvent e1501 = new InvoiceSentEvent();
+e1501.setId(\"15:01\");
+publish(e1501);
+
+open(\"http://localhost:42000\");
+pre = $(\"#history\");
+pre.shouldHave(text(\"- 15_01:\"));
 
 // workflow CovidVaccination
 
