--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -35,7 +35,7 @@ jobs:
          -  name: Check gradlew permissions
             run: ls -l ./gradlew
          -  name: Build with Gradle
-            run: ./gradlew --stacktrace --info test
+            run: ./gradlew --info test
          -  name: Deploy to Maven Central
             if: matrix.os == 'ubuntu' && matrix.java == 8 && startsWith(github.ref, 'refs/tags/v')
             run: |
