MicroShop Refined handles command without trigger event now.

--- a/test/src/gen/resources/workflows/shop/ShopRefinedProductStoredEventStorming.es.yaml
+++ b/test/src/gen/resources/workflows/shop/ShopRefinedProductStoredEventStorming.es.yaml
@@ -4,19 +4,19 @@
 - action: Peter Picker
 
 - command: store product
-  barcode: 001
+  barcode: b001
   type: red shoes
   location: shelf 42
 
 - policy: Warehouse
 
 - data: Box
-  barcode: 001
+  barcode: b001
   content: red shoes
   location: shelf 42
 
 - event: product stored
-  barcode: 001
+  barcode: b001
   type: red shoes
 
 - event: product offered
