--- a/test/src/test/java/uks/debuggen/microshop/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/microshop/classModel.yaml
@@ -9,8 +9,8 @@
 
 - testSomeEventStorming: 	org.fulib.classmodel.Clazz
   attributes: 	testSomeEventStorming_eventBroker
-  importList: 	"import org.junit.Test;" 	"import java.util.LinkedHashMap;" 	"import uks.debuggen.microshop.events.*;" 	"import org.fulib.yaml.Yaml;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import static com.codeborne.selenide.Selenide.open;" 	"import static com.codeborne.selenide.Selenide.$;" 	"import static com.codeborne.selenide.Condition.text;" 	"import static com.codeborne.selenide.Condition.matchText;" 	"import com.codeborne.selenide.SelenideElement;"
-  imports: 	"import org.junit.Test;" 	"import java.util.LinkedHashMap;" 	"import uks.debuggen.microshop.events.*;" 	"import org.fulib.yaml.Yaml;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import static com.codeborne.selenide.Selenide.open;" 	"import static com.codeborne.selenide.Selenide.$;" 	"import static com.codeborne.selenide.Condition.text;" 	"import static com.codeborne.selenide.Condition.matchText;" 	"import com.codeborne.selenide.SelenideElement;"
+  importList: 	"import org.junit.Test;" 	"import java.util.LinkedHashMap;" 	"import uks.debuggen.microshop.events.*;" 	"import uks.debuggen.microshop.Warehouse.WarehouseService;" 	"import org.fulib.yaml.Yaml;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import static com.codeborne.selenide.Selenide.open;" 	"import static com.codeborne.selenide.Selenide.$;" 	"import static com.codeborne.selenide.Condition.text;" 	"import static com.codeborne.selenide.Condition.matchText;" 	"import com.codeborne.selenide.SelenideElement;"
+  imports: 	"import org.junit.Test;" 	"import java.util.LinkedHashMap;" 	"import uks.debuggen.microshop.events.*;" 	"import uks.debuggen.microshop.Warehouse.WarehouseService;" 	"import org.fulib.yaml.Yaml;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import static com.codeborne.selenide.Selenide.open;" 	"import static com.codeborne.selenide.Selenide.$;" 	"import static com.codeborne.selenide.Condition.text;" 	"import static com.codeborne.selenide.Condition.matchText;" 	"import com.codeborne.selenide.SelenideElement;"
   methods: 	testSomeEventStorming_SomeEventStorming 	testSomeEventStorming_publish
   model: 	c
   modified: 	false
@@ -42,6 +42,10 @@ public void SomeEventStorming()"
   methodBody: 	"// start the event broker
 eventBroker = new EventBroker();
 eventBroker.start();
+
+// start service
+WarehouseService warehouse = new WarehouseService();
+warehouse.start();
 try {
    Thread.sleep(1500);
 } catch (Exception e) {
@@ -51,12 +55,50 @@ open(\"http://localhost:42000\");
 $(\"body\").shouldHave(text(\"event broker\"));
 
 SelenideElement pre = $(\"pre\");
+pre.shouldHave(text(\"http://localhost:42001/apply\"));
 LinkedHashMap<String, Object> modelMap;
+
+// workflow SmoothCase
+
+// create StoreProductCommand: store product
+StoreProductCommand e1201 = new StoreProductCommand();
+e1201.setId(\"12:01\");
+e1201.setBarcode(\"b001\");
+e1201.setType(\"red shoes\");
+e1201.setLocation(\"shelf 42\");
+publish(e1201);
+
+open(\"http://localhost:42000\");
+pre = $(\"#history\");
+pre.shouldHave(text(\"- 12_01:\"));
+
+// check Warehouse
+open(\"http://localhost:42001\");
+pre = $(\"#history\");
+pre.shouldHave(text(\"- 12_01:\"));
+for (DataEvent dataEvent : warehouse.getBuilder().getEventStore().values()) {
+   warehouse.getBuilder().load(dataEvent.getBlockId());
+}
+modelMap = warehouse.getBuilder().getModel().getModelMap();
+if (modelMap.values().size() > 0) {
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/warehouse12_01.svg\", modelMap.values());
+}
+
+open(\"http://localhost:42001\");
+// check data note 12:01:01
+pre = $(\"#data\");
+pre.shouldHave(text(\"- b001:\"));
+pre.shouldHave(matchText(\"barcode:.*b001\"));
+pre.shouldHave(matchText(\"content:.*\\"red shoes\\"\"));
+pre.shouldHave(matchText(\"location:.*\\"shelf 42\\"\"));
+
+// workflow OutOfStock
 try {
    Thread.sleep(3000);
 } catch (Exception e) {
 }
 eventBroker.stop();
+warehouse.stop();
 
 System.out.println();
 "
